# nyx

./: .env.devnet.example  .gitignore  Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
circuits/: package.json
circuits/valid_spend/: circuit.circom
circuits/valid_wallet_create/: circuit.circom
crates/darkpool-crypto/: Cargo.toml
crates/darkpool-crypto/examples/: derive-keys.rs  poseidon-hash.rs  user-commitment.rs
crates/darkpool-crypto/src/: errors.rs  field.rs  keys.rs  lib.rs  note.rs  nullifier.rs  poseidon.rs  user_commitment.rs  viewing_keys.rs
programs/matching_engine/: Cargo.toml
programs/matching_engine/src/: errors.rs  lib.rs
programs/matching_engine/src/instructions/: cancel_order.rs  commit_market_state.rs  configure_access.rs  delegate_batch_results.rs  delegate_dark_clob.rs  delegate_matching_config.rs  delegate_pending_order.rs  init_market.rs  init_mock_oracle.rs  init_pending_order_slot.rs  mod.rs  run_batch.rs  submit_order.rs  undelegate_market.rs
programs/matching_engine/src/state/: batch_results.rs  change_note.rs  dark_clob.rs  fee_accumulator.rs  match_result.rs  matching_config.rs  mod.rs  order_record.rs  pending_order.rs  pyth.rs
programs/matching_engine/tests/: run_batch.rs  settle.rs  submit_order.rs
programs/matching_engine/tests/common/: mod.rs
programs/vault/: Cargo.toml
programs/vault/src/: errors.rs  lib.rs  merkle.rs  state.rs
programs/vault/src/instructions/: create_wallet.rs  deposit.rs  initialize.rs  lock_note.rs  mod.rs  release_lock.rs  reset_merkle_tree.rs  rotate_root_key.rs  set_protocol_config.rs  tee_forced_settle.rs  withdraw.rs
programs/vault/src/zk/: mod.rs  verifier.rs  vk_valid_spend.rs  vk_valid_wallet_create.rs
programs/vault/tests/: merkle_host.rs  set_protocol_config.rs  user_commitment_registration.rs  zk_roundtrip.rs  zk_spend_roundtrip.rs
programs/vault/tests/common/: mod.rs
scripts/: build-circuits.sh  deploy-devnet.sh  dev-commands.md  download-ptau.sh  parse-vk-to-rust.js  setup-devnet.sh
