[workspace]
resolver = "2"
members = [
    "programs/vault",
    "crates/darkpool-crypto",
]
exclude = [
    "darkpool",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nyx Darkpool"]
license = "Apache-2.0"

[workspace.dependencies]
# Anchor
anchor-lang = "0.32.1"
anchor-spl  = "0.32.1"

# Solana
solana-program = "2"

# Light Protocol (Merkle + Poseidon)
light-poseidon = "0.3.0"
solana-poseidon = "3.1.11"

# ZK Groth16 verifier (on-chain)
groth16-solana = "0.2.0"

# ZK Groth16 prover (off-chain)
ark-groth16 = "0.5.0"
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
ark-ec = "0.5.0"

# Key derivation / crypto
ed25519-dalek = "2.2.0"
hkdf = "0.12.4"
sha3 = "0.10.8"
sha2 = "0.10.8"
rand = "0.8"

# SPL tokens
spl-token = "4.0"

# TEE / MagicBlock
ephemeral-rollups-sdk = { version = "0.8.0", features = ["anchor", "access-control"] }

# Serde
borsh = "1.5"
bytemuck = { version = "1.16", features = ["derive"] }

# Error handling
thiserror = "1.0"

# Testing
litesvm = "0.9.1"
proptest = "1.4"
hex = "0.4"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
