[package]
name = "darkpool-crypto"
version.workspace = true
edition.workspace = true
description = "Shared cryptographic primitives (Poseidon, note commitments, nullifiers, key derivation) for the Nyx dark pool. Must produce byte-identical output on-chain and off-chain."

[lib]
crate-type = ["rlib"]

[features]
default = []
# Use light-poseidon for off-chain parity with on-chain sol_poseidon syscall
solana = []

[dependencies]
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
borsh = { workspace = true, features = ["derive"] }

[target.'cfg(target_os = "solana")'.dependencies]
solana-poseidon = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
light-poseidon = { workspace = true }
hkdf = { workspace = true }
sha3 = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand = { workspace = true }
chacha20poly1305 = "0.10.1"

[dev-dependencies]
proptest = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
