[package]
name = "matching_engine"
version.workspace = true
edition.workspace = true
description = "Nyx dark pool matching engine: DarkCLOB + JWT-authenticated order submission inside MagicBlock PER (Phase 3 scope; batch auction lands in Phase 4)."

[lib]
crate-type = ["cdylib", "lib"]
name = "matching_engine"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
test-sbf = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
solana-program = { workspace = true }
ephemeral-rollups-sdk = { workspace = true }
vault = { path = "../vault", features = ["cpi"] }
bytemuck = { version = "1.20.0", features = ["min_const_generics"] }

[dev-dependencies]
litesvm = { workspace = true }
solana-account = "~3.4"
solana-address = "2"
solana-instruction = "~3.1"
solana-keypair = "~3.1"
solana-message = "~3.0"
solana-signer = "~3.0"
solana-transaction = "~3.0"
solana-system-interface = "3.0.0"
borsh = { workspace = true, features = ["derive"] }
sha2 = "0.10"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
