[package]
name = "vault"
version.workspace = true
edition.workspace = true
description = "Nyx dark pool custody vault: UTXO note Merkle tree, nullifier set, consumed-notes set, note locks, Groth16 verification of spend + wallet-create proofs."

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
# Host-side testing (disables BPF-only code paths).
test-sbf = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
groth16-solana = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
darkpool-crypto = { path = "../../crates/darkpool-crypto" }
bytemuck = { version = "1.20.0", features = ["min_const_generics"] }

[target.'cfg(target_os = "solana")'.dependencies]
solana-poseidon = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
light-poseidon = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
litesvm = { workspace = true }
solana-address = "2"
solana-instruction = "~3.1"
solana-keypair = "~3.1"
solana-message = "~3.0"
solana-signer = "~3.0"
solana-transaction = "~3.0"
solana-system-interface = "3.0.0"
sha2 = "0.10"
borsh = { workspace = true, features = ["derive"] }
darkpool-crypto = { path = "../../crates/darkpool-crypto" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
